# PHUB

./: README.md  pyproject.toml
phub/: phub.py
phub/modules/: consts.py
pornhub_api/: __init__.py  api.py
pornhub_api/modules/: consts.py  errors.py
pornhub_api/tests/: test_album.py  test_channel.py  test_gif.py  test_playlist.py  test_search.py  test_user.py  test_video.py
