[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unofficial-api-for-pornhub"
version = "5.2"
description = "An asynchronous API wrapper and scraper for Pornhub"
authors = [
  {name = 'Egsagon', email = "egsagon.git@gmail.com"},
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["pornhub", "phub", "porn", "api", "web scrapper", "api wrapper"]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "m3u8",
  "chompjs",
  "selectolax",
  "eaf-base-api",
]

[project.optional-dependencies]
av = ["av"]

[project.scripts]
phub = "pornhub_api.api:cli"

[project.urls]
Documentation = "https://github.com/EchterAlsFake/API_Docs/blob/master/Porn_APIs/PHUB.md"
Repository = "https://github.com/EchterAlsFake/unofficial-api-for-pornhub"

[tool.uv.build-backend]
module-name = "pornhub_api"
module-root = ""
