[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unofficial-api-for-pornhub"
version = "5.2"
description = "An asynchronous API wrapper and scraper for Pornhub"
authors = [
  {name = 'Egsagon', email = "egsagon.git@gmail.com"},
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "api",
    "scraper",
    "async",
    "asyncio",
    "video-downloader",
    "selectolax",
    "chompjs",
    "m3u8",
    "hls",
    "pornhub",
    "login"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video"
]
dependencies = [
  "m3u8",
  "chompjs",
  "selectolax",
  "eaf-base-api",
]

[project.optional-dependencies]
av = ["av"]

[project.scripts]
phub = "pornhub_api.api:cli"

[project.urls]
Documentation = "https://github.com/EchterAlsFake/API_Docs/blob/master/Porn_APIs/PHUB.md"
Repository = "https://github.com/EchterAlsFake/unofficial-api-for-pornhub"
"Bug Tracker" = "https://github.com/EchterAlsFake/unofficial-api-for-pornhub/issues"
"Support me on Ko-Fi" = "https://ko-fi.com/EchterAlsFake"
"Donate via PayPal" = "https://paypal.me/EchterAlsFake"
"Donate via Crypto" = "https://nowpayments.io/donation/EchterAlsFake"

[tool.uv.build-backend]
module-name = "pornhub_api"
module-root = ""
